--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="/propiedades_venta.html">En venta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/propiedades_alquiler.html">Alquiler</a>
+            <a class="nav-link" href="/propiedades_alquiler.html">En Alquiler</a>
           </li>
         </ul>
       </div>
@@ -46,19 +46,9 @@
       <h2>Propiedades en venta</h2>
       <div class="row" id="venta_container">
       </div>
-      <a href="/propiedades_venta.html" class="btn btn-dark">Ver todas las propiedades en venta</a>
     </section>
 
     <hr />
-
-    <!-- Propiedades en alquiler -->
-    <section id="alquiler" class="mb-5">
-      <h2>Propiedades en alquiler</h2>
-      <div class="row" id="alquiler_container">
-      </div>
-      <a href="/propiedades_alquiler.html" class="btn btn-dark">Ver todas las propiedades en alquiler</a>
-    </section>
-
   </div>
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/f5bdbb41e0.js" crossorigin="anonymous"></script>
@@ -68,6 +58,6 @@
     crossorigin="anonymous"></script>
   <!-- Script JS -->
   <script src="/assets/js/datos.js"></script>
-  <script src="/assets/js/index.js"></script>
+  <script src="/assets/js/venta.js"></script>
 </body>
 </html>
